<resources>
    <string name="app_name">Instagram</string>
    <string name="forgot_your_login_details_get_help_signing_in">Forgot your login details? Get help signing in.</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="instagram">Instagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
</resources>
